--- a/JS-Lógica/imc.html
+++ b/JS-Lógica/imc.html
@@ -79,8 +79,8 @@
         //Agora iremos interagir com o usuário.
         //o prompt  pega as informações  do usuario e aloca dentro de uma variavel
         var nome = prompt("Qual o seu nome?");
-        var alturaInformada = prompt( nome+", a sua altura?");
-        var pesoInformado = prompt( nome+", o seu peso?");
+        var alturaInformada = prompt( nome+",  qual a sua altura?");
+        var pesoInformado = prompt( nome+", qual o seu peso?");
         var imc = calcularImc(alturaInformada, pesoInformado);
         mostra(nome + " o resultado do seu IMC é "+ imc);
 
