--- a/JS-Lógica/futebol.html
+++ b/JS-Lógica/futebol.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futebol</title>
-    <link rel="stylesheet" href="/Public/icons8-javascript-32.png">
+   <link rel="shortcut icon" href="/Public/icons8-javascript-32.png" type="image/x-icon">
 </head>
 <body>
     <script>
