--- a/JS-Lógica/exercicio-12.html
+++ b/JS-Lógica/exercicio-12.html
@@ -21,23 +21,11 @@
             pulaLinha();
         }
 
-        var contador = 30;
-        while(contador <= 40 )
+        var contador = 20;
+        while(contador <=20 )
         {
-            if(contador == 33)
-            {
-                contador = contador + 1;
-            }
-
-            else if(contador == 37)
-            {
-               contador = contador + 1;
-            }
-            else
-            {
-                mostra(contador);
-                contador = contador + 1;
-            }
+            mostra(contador)
+            contador = contador - 1;
         }
         mostra("Fim");
     </script>
