--- a/JS-Lógica/exercicio-13.html
+++ b/JS-Lógica/exercicio-13.html
@@ -22,17 +22,17 @@
         var login = aline;
         var senha = aline123;
 
-        var loginInformado = prompt("Informeo login: ")
-        var senhaInformada = prompt("Informe a senha:")
+        var loginInformado = prompt("Informeo login: ");
+        var senhaInformada = prompt("Informe a senha:");
 
         if(login == loginInformado && senha == senhaInformada)
         {
-            mostra("Login feito com sucesso!")
+            mostra("Login feito com sucesso!");
         }
 
         if(login != loginInformado || senha != senhaInformada)
         {
-            mostra("Login ou senha incorretos")
+            mostra("Login ou senha incorretos");
         }
 
     </script>
