--- a/JS-Lógica/exercicio-9.html
+++ b/JS-Lógica/exercicio-9.html
@@ -25,11 +25,11 @@
 
         if(idade >= 18 && temCarteira == "S")
         {
-            mostra("Pode dirigir")
+            mostra("Pode dirigir");
         }
         else 
         {
-            mostra("Não pode dirigir")
+            mostra("Não pode dirigir");
         }
 
         //Resolução do professor
