--- a/JS-Lógica/Tabuada.html
+++ b/JS-Lógica/Tabuada.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 13</title>
+    <title>multiplicador</title>
     <link rel="shortcut icon" href="/Public/icons8-javascript-32.png" type="image/x-icon">
 </head>
 <body>
@@ -20,12 +20,14 @@
 
         var multiplicador = 1;
 
-        while(multiplicador <= 10)
+        //while(multiplicador <= 10)
+        for(var multiplicador = 1; multiplicador<=10; multiplicador++)
         {
-            mostra(7 * multiplicador);
-            multiplicador = multiplicador + 1;
-            
+            mostra(7 * multiplicador)
         }
+//começaremos a conhecer o famoso laço "for".
+//O Laço tem 3 espaços para fazer a adição da variavel, da condição e do incremento caso haja algum. Apesar disso ele faz a mesma função do laço "while."
+//Dica de programador (ou do professor nesse caso kkkkkkk). Quando quisermos fazer a incrementação de uma variavel podemos apenas colocar um "++" para que não seja necessario ecrever tanto como em "multiplicador = multiplicador + 1", dito isso deixo aqui um exemplo de como escrever a nova forma de incrementação "multiplicador++". Modifiquei no exemplo acima para melhor entendimento.
 
     </script>
 </body>
