--- a/JS-Lógica/exercicio-14.html
+++ b/JS-Lógica/exercicio-14.html
@@ -25,6 +25,8 @@
         }
 
         mostra(idade);
+
+        //Quando digitamos um numeros em "digite sua idade: " ele obviamente aceitará os números fornecidos mas e escreve-se mos o nosso nome em vez disso ? ele aceitaria ? Não, não aceitaria pois como temos um "parseInt" no "prompt" ele acaba aceitando apenas números, entretanto ao escrever qualquer coisa que não seja um número o programa retornará uma mensagem "NaN" ou "Not a Number" para que essa mensagem não seja mostrada e retorne o campo de digitação novamente nós usamos o laço "while" para  que "NaN" seja lido e que a partir disso o "prompt" seja mostrado novamente e para isso usamos o "isNaN" para que ele seja identificado.
     </script>
 </body>
 </html>
