--- a/JS-DOM/Fokus-projeto-base/index.html
+++ b/JS-DOM/Fokus-projeto-base/index.html
@@ -15,14 +15,14 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <script src="/Fokus-projeto-base/script.js" defer></script> <!-- A palavra chave "defer" é usada para que o programa leia todo o arquivo html antes de ler o javascript. -->
+    <script src="/script.js" defer></script> <!-- A palavra chave "defer" é usada para que o programa leia todo o arquivo html antes de ler o javascript. -->
 </head>
 
 <body>
     <main class="app">
         <header class="app__header">
             <figure class="app__logo-figure">
-                <img class="app__logo-image" src="/Fokus-projeto-base/imagens/logo.png" alt="">
+                <img class="app__logo-image" src="imagens/logo.png" alt="">
             </figure>
         </header>
         <section class="app__section-banner-container">
@@ -31,7 +31,7 @@
                 <strong class="app__title-strong">mergulhe no que importa.</strong>
             </h1>
             <figure class="app__image-figure">
-                <img class="app__image" src="/Fokus-projeto-base/imagens/foco.png" alt="">
+                <img class="app__image" src="imagens/foco.png" alt="">
             </figure>
         </section>
         <section class="app__section-card-container">
@@ -63,7 +63,7 @@
                 </ul>
                 <div class="app__card-primary-button-wrapper">
                     <button id="start-pause" class="app__card-primary-button">
-                        <img class="app__card-primary-butto-icon" src="/Fokus-projeto-base/imagens/play_arrow.png" alt="">
+                        <img class="app__card-primary-butto-icon" src="imagens/play_arrow.png" alt="">
                         <span>Começar</span>
                     </button>
                 </div>
