--- a/projeto-vidflow-main/index.html
+++ b/projeto-vidflow-main/index.html
@@ -173,7 +173,26 @@
             </li>
         </ul>
     </aside>
-    <!--o gitdesktop bugou-->
+    <section class="superior__secao__container">
+        <div class="superior__secao__container-wrapper">
+            <a href="#" name="Tudo" class="superior__item">Tudo</a>
+            <a href="#" name="Database" class="superior__item">Debates</a>
+            <a href="#" name="Ao Vivo" class="superior__item">Ao Vivo</a>
+            <a href="#" name="Podcast" class="superior__item">Podcast</a>
+            <a href="#" name="Frot-end" class="superior__item">Front-end</a>
+            <a href="#" name="Mobile" class="superior__item">Mobile</a>
+            <a href="#" name="Data Science" class="superior__item">Data Science</a>
+            <a href="#" name="Apss" class="superior__item">Apps</a>
+            <a href="#" name="Programação" class="superior__item">Programação</a>
+            <a href="#" name="Inteligência Atificial" class="superior__item">Inteligência Artificial</a>
+            <a href="#" name="Inovação" class="superior__item">Inovação</a>
+        </div>
+        <label class="superior__slider">
+            <span>
+                <img src="./img/arrow_forward_ios.png" alt="Flacha direcinada para direita">
+            </span>
+        </label>
+    </section>
 
 <script src="/script.js"></script>
 </body>
