--- a/projeto-vidflow-main/index.html
+++ b/projeto-vidflow-main/index.html
@@ -193,7 +193,9 @@
             </span>
         </label>
     </section>
+    <ul class="videos__container">
+    </ul>
 
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
