--- a/AluraBooks-2/alura_books-projeto_inicial/index.html
+++ b/AluraBooks-2/alura_books-projeto_inicial/index.html
@@ -10,6 +10,9 @@
     integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
+  <script src="./app/main.js" defer></script>
+  <script src="./app/metodoForEach.js" defer></script>
+  <script src="./app/metodoMap.js" defer></script>
 </head>
 <header class="header">
   <h1><img src="imagens/Logo-1.png" /></h1>
@@ -29,8 +32,8 @@
       <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco">ORDENAR POR PREÇO</button></li>
     </ul>
   </nav>
-  <section class="livros wrap" id="livros">
-    <div class="livro">
+ <section class="livros wrap" id="livros">
+     <!-- <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
         Cangaceiro JavaScript:
@@ -261,7 +264,7 @@
         <span class="tag">Front-end</span>
         <span class="tag">Back-end</span>
       </div>
-    </div>
+    </div> -->
 
   </section>
   <section id="valor_total_livros_disponiveis">
