--- a/AluraPlay/aluraplay-requisicoes-main/index.html
+++ b/AluraPlay/aluraplay-requisicoes-main/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="./css/flexbox.css">
-    <script src="./js/conectaApi.js" defer></script>
+    <script src="./js/mostrarVideos.js" type="module" defer></script>
     <title>AluraPlay</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
@@ -35,7 +35,7 @@
 
     </header>
 
-    <ul class="videos__container" alt="videos alura">
+    <ul class="videos__container" alt="videos alura" data-lista>
         <li class="videos__item">
             <iframe width="100%" height="72%" src="https://www.youtube.com/embed/pA-EgOaF23I"
                 title="YouTube video player" frameborder="0"
