--- a/AluraPlay/aluraplay-requisicoes-main/index.html
+++ b/AluraPlay/aluraplay-requisicoes-main/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="./css/flexbox.css">
-    <script src="./js/mostrarVideos.js" type="module" defer></script>
     <title>AluraPlay</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
@@ -81,6 +80,7 @@
             </div>
         </li>
     </ul>
+    <script src="./js/mostrarVideos.js" type="module"></script>
 </body>
 
 </html>
