--- a/AluraPlay/aluraplay-requisicoes-main/pages/enviar-video.html
+++ b/AluraPlay/aluraplay-requisicoes-main/pages/enviar-video.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../css/flexbox.css">
     <title>AluraPlay</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"> 
-    <script src="../js/criarVideo.js" type="module" defer ></script>
 </head>
 
 <body>
@@ -55,9 +54,9 @@
 
                 <input class="formulario__botao" type="submit" />
         </form>
-
+        
     </main>
-
+    <script src="../js/criarVideo.js" type="module"></script>
 </body>
 
 </html>
